# DeepMythomatics

./: 1_basic_tutorial.ipynb  NN_NextFlow-2.ipynb  NN_Start.ipynb  README.md  RNN_Language-Translator.ipynb
.ipynb_checkpoints/: NN_Start-checkpoint.ipynb
Bayesian/: NN-Bayesian-1.ipynb
Boltzman/: NN_Boltzman_2.ipynb
CNN/: NN-CNN-1.ipynb  NN-CNN-2.ipynb  NN_CNN_3_Encoders.ipynb
CUBlas/: .~lock.helpdoc-cuBlas.doc#  CMakeLists.txt  Readme.md  helpdoc-cuBlas.doc
CUBlas/include/: RMD-batch-svd.h  RMD-cublas.h  RMD_ara_util.cuh  RMD_kernel_svd.cuh  matrix_multiply.cuh
CUBlas/include/batch_copy/: batch_block_copy.h
CUBlas/include/batch_gqep/: batch_gqep.h
CUBlas/include/batch_pstrf/: batch_pstrf.h
CUBlas/include/batch_rand/: batch_rand.h
CUBlas/include/batch_transpose/: batch_transpose.h
CUBlas/src/: RMD-batch-qr.cu  RMD-batch-svd.cu  RMD_kernel_svd.cu  batch_ara.cu  main.cu  matrix_multiply.cu
CUBlas/src/batch_copy/: Readme_bc.md  batch_block_copy.cu
CUBlas/src/batch_gqep/: Readme_bc_qep.md  batch_qep.cu
CUBlas/src/batch_pstrf/: Readme_pstrf.md  batch_pstrf.cu
CUBlas/src/batch_rand/: Readme_br.md  batch_rand.cu
CUBlas/src/batch_transpose/: Readme_btr.md  batch_transpose.cpp
Fulla_Stats/: README.md
Gote_Anumaan/: .~lock.Anumaan_motes.doc#  README.md
ManVSMachine/: README.md  The_Blue_Moon_And_Man_vs_Machine-5 .ipynb  The_Blue_Mountain_Man vs Machine-2.ipynb  The_Blue_Mountain_Man_vs_Machine-3.ipynb  The_Blue_Mountain_Man_vs_Machine-4.ipynb  The_Blue_Mountain_MvsM-1.ipynb
OCR_RMD/: Model_Evaluation_FineTunung.py  data_preparation.py  main.py  (+17 more)
(+472 files in other folders)
